--- a/app/src/main/res/layout/screen_play.xml
+++ b/app/src/main/res/layout/screen_play.xml
@@ -21,7 +21,8 @@
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@color/color5" />
+            android:src="@color/color5"
+            android:contentDescription="@string/todo" />
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -36,6 +37,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageblock"
+        tools:text="@tools:sample/full_names" />
+    <TextView
+        android:id="@+id/textArtistName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:maxLines="1"
+        android:textColor="@color/color5"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textMusicName"
         tools:text="@tools:sample/full_names" />
 
     <com.airbnb.lottie.LottieAnimationView
